--- a/src/partials/aboutrest.html
+++ b/src/partials/aboutrest.html
@@ -52,92 +52,92 @@
                 <div class="slider-item">
                     <picture>
                         <source srcset="
-                                            ../img/aboutrest/pexels-helena-lopes-desc.jpg    1x,
-                                            ../img/aboutrest/pexels-helena-lopes-desc-2x.jpg 2x
+                                            ./img/aboutrest/pexels-helena-lopes-desc.jpg    1x,
+                                            ./img/aboutrest/pexels-helena-lopes-desc-2x.jpg 2x
                                           " media="(min-width: 1280px)" />
                         <source srcset="
-                                        ../img/aboutrest/pexels-helena-lopes-tab.jpg    1x,
-                                        ../img/aboutrest/pexels-helena-lopes-tab-2x.jpg 2x
+                                        ./img/aboutrest/pexels-helena-lopes-tab.jpg    1x,
+                                        ./img/aboutrest/pexels-helena-lopes-tab-2x.jpg 2x
                                       " media="(min-width: 1024px)" />
                         <source srcset="
-                                            ../img/aboutrest/pexels-helena-lopes-mob.jpg    1x,
-                                            ../img/aboutrest/pexels-helena-lopes-mob-2x.jpg 2x
+                                            ./img/aboutrest/pexels-helena-lopes-mob.jpg    1x,
+                                            ./img/aboutrest/pexels-helena-lopes-mob-2x.jpg 2x
                                           " media="(min-width: 320px)" />
 
-                        <img class="border-three" src="../img/aboutrest/pexels-helena-lopes-mob.jpg"
+                        <img class="border-three" src="./img/aboutrest/pexels-helena-lopes-mob.jpg"
                             alt="pexels-helena-lopes">
                     </picture>
                 </div>
                 <div class="slider-item">
                     <picture>
                         <source srcset="
-                                                        ../img/aboutrest/about_rest_1_desc_1x.jpg    1x,
-                                                        ../img/aboutrest/about_rest_1_desc_2x.jpg 2x
+                                                        ./img/aboutrest/about_rest_1_desc_1x.jpg    1x,
+                                                        ./img/aboutrest/about_rest_1_desc_2x.jpg 2x
                                                       " media="(min-width: 1280px)" />
                         <source srcset="
-                                                    ../img/aboutrest/about_rest_1_tab_1x.jpg    1x,
-                                                    ../img/aboutrest/about_rest_1_tab_2x.jpg  2x"
+                                                    ./img/aboutrest/about_rest_1_tab_1x.jpg    1x,
+                                                    ./img/aboutrest/about_rest_1_tab_2x.jpg  2x"
                             media="(min-width: 1024px)" />
                         <source srcset="
-                                                        ../img/aboutrest/about_rest_1_mob_1x.jpg   1x,
-                                                        ../img/aboutrest/about_rest_1_mob_2x.jpg 2x
+                                                        ./img/aboutrest/about_rest_1_mob_1x.jpg   1x,
+                                                        ./img/aboutrest/about_rest_1_mob_2x.jpg 2x
                                                       " media="(min-width: 320px)" />
 
-                        <img class="border-four" src="../img/aboutrest/about_rest_1_mob_1x.jpg" alt="pexels-mat-brown">
+                        <img class="border-four" src="./img/aboutrest/about_rest_1_mob_1x.jpg" alt="pexels-mat-brown">
                     </picture>
                 </div>
                 <div class="slider-item">
                     <picture>
                         <source srcset="
-                                                                            ../img/aboutrest/about_rest_2_desc_1x.jpg    1x,
-                                                                            ../img/aboutrest/about_rest_2_desc_2x.jpg 2x
+                                                                            ./img/aboutrest/about_rest_2_desc_1x.jpg    1x,
+                                                                            ./img/aboutrest/about_rest_2_desc_2x.jpg 2x
                                                                           " media="(min-width: 1280px)" />
                         <source srcset="
-                                                                        ../img/aboutrest/about_rest_2_tab_1x.jpg    1x,
-                                                                        ../img/aboutrest/about_rest_2_tab_2x.jpg  2x"
+                                                                        ./img/aboutrest/about_rest_2_tab_1x.jpg    1x,
+                                                                        ./img/aboutrest/about_rest_2_tab_2x.jpg  2x"
                             media="(min-width: 1024px)" />
                         <source srcset="
-                                                                            ../img/aboutrest/about_rest_2_mob_1x.jpg   1x,
-                                                                            ../img/aboutrest/about_rest_2_mob_2x.jpg 2x
+                                                                            ./img/aboutrest/about_rest_2_mob_1x.jpg   1x,
+                                                                            ./img/aboutrest/about_rest_2_mob_2x.jpg 2x
                                                                           " media="(min-width: 320px)" />
 
-                        <img class="border-four" src="../img/aboutrest/about_rest_2_mob_1x.jpg" alt="pexels-mat-brown">
+                        <img class="border-four" src="./img/aboutrest/about_rest_2_mob_1x.jpg" alt="pexels-mat-brown">
                     </picture>
                 </div>
                 <div class="slider-item">
                     <picture>
                         <source srcset="
-                                                                            ../img/aboutrest/about_rest_3_desc_1x.jpg    1x,
-                                                                            ../img/aboutrest/about_rest_3_desc_2x.jpg 2x
+                                                                            ./img/aboutrest/about_rest_3_desc_1x.jpg    1x,
+                                                                            ./img/aboutrest/about_rest_3_desc_2x.jpg 2x
                                                                           " media="(min-width: 1280px)" />
                         <source srcset="
-                                                                        ../img/aboutrest/about_rest_3_tab_1x.jpg    1x,
-                                                                        ../img/aboutrest/about_rest_3_tab_2x.jpg  2x"
+                                                                        ./img/aboutrest/about_rest_3_tab_1x.jpg    1x,
+                                                                        ./img/aboutrest/about_rest_3_tab_2x.jpg  2x"
                             media="(min-width: 1024px)" />
                         <source srcset="
-                                                                            ../img/aboutrest/about_rest_3_mob_1x.jpg   1x,
-                                                                            ../img/aboutrest/about_rest_3_mob_2x.jpg 2x
+                                                                            ./img/aboutrest/about_rest_3_mob_1x.jpg   1x,
+                                                                            ./img/aboutrest/about_rest_3_mob_2x.jpg 2x
                                                                           " media="(min-width: 320px)" />
 
-                        <img class="border-four" src="../img/aboutrest/about_rest_3_mob_1x.jpg" alt="pexels-mat-brown">
+                        <img class="border-four" src="./img/aboutrest/about_rest_3_mob_1x.jpg" alt="pexels-mat-brown">
                     </picture>
                 </div>
                 <div class="slider-item">
                     <picture>
                         <source srcset="
-                                                                            ../img/aboutrest/about_rest_4_desc_1x.jpg    1x,
-                                                                            ../img/aboutrest/about_rest_4_desc_2x.jpg 2x
+                                                                            ./img/aboutrest/about_rest_4_desc_1x.jpg    1x,
+                                                                            ./img/aboutrest/about_rest_4_desc_2x.jpg 2x
                                                                           " media="(min-width: 1280px)" />
                         <source srcset="
-                                                                        ../img/aboutrest/about_rest_4_tab_1x.jpg    1x,
-                                                                        ../img/aboutrest/about_rest_4_tab_2x.jpg  2x"
+                                                                        ./img/aboutrest/about_rest_4_tab_1x.jpg    1x,
+                                                                        ./img/aboutrest/about_rest_4_tab_2x.jpg  2x"
                             media="(min-width: 1024px)" />
                         <source srcset="
-                                                                            ../img/aboutrest/about_rest_4_mob_1x.jpg   1x,
-                                                                            ../img/aboutrest/about_rest_4_mob_2x.jpg 2x
+                                                                            ./img/aboutrest/about_rest_4_mob_1x.jpg   1x,
+                                                                            ./img/aboutrest/about_rest_4_mob_2x.jpg 2x
                                                                           " media="(min-width: 320px)" />
 
-                        <img class="border-four" src="../img/aboutrest/about_rest_4_mob_1x.jpg" alt="pexels-mat-brown">
+                        <img class="border-four" src="./img/aboutrest/about_rest_4_mob_1x.jpg" alt="pexels-mat-brown">
                     </picture>
                 </div>
             </div>
