--- a/src/partials/aboutkitchen.html
+++ b/src/partials/aboutkitchen.html
@@ -40,7 +40,6 @@
         <img
           src="./img/restaurant-interior-mobile.jpg"
           alt="restaurant-interior"
-          
         />
         <!-- width="460"
           height="574" -->
@@ -66,19 +65,20 @@
           "
           media="(min-width: 1280px)"
         />
-        <source srcset="
-        ./img/oruri-jacome-tablet.jpg    1x,
-        ./img/oruri-jacome-tablet-2x.jpg 2x
-      "
-      media="(min-width: 1024px)"
-      />
-        <source 
-        srcset="
+        <source
+          srcset="
+            ./img/oruri-jacome-tablet.jpg    1x,
+            ./img/oruri-jacome-tablet-2x.jpg 2x
+          "
+          media="(min-width: 1024px)"
+        />
+        <source
+          srcset="
             ./img/oruri-jacome-mobile.jpg    1x,
             ./img/oruri-jacome-mobile-2x.jpg 2x
           "
           media="(min-width: 320px)"
-          />
+        />
 
         <img
           src="./img/oruri-jacome-mobile.jpg"
@@ -87,11 +87,10 @@
             ./img/oruri-jacome-mobile.jpg    1x,
             ./img/oruri-jacome-mobile.jpg-2x 2x
           "
-          
         />
         <!-- width="200"
           height="278" -->
-          <!-- width="460"
+        <!-- width="460"
           height="574" -->
       </picture>
       <p class="oruri-descript">
@@ -111,20 +110,21 @@
               "
               media="(min-width: 1280px)"
             />
-            <source srcset="
-            ./img/helena-lopes-tablet.jpg    1x,
-            ./img/helena-lopes-tablet-2x.jpg 2x
-          "
-          media="(min-width: 1024px)"
-          />
-            <source 
-            srcset="
+            <source
+              srcset="
+                ./img/helena-lopes-tablet.jpg    1x,
+                ./img/helena-lopes-tablet-2x.jpg 2x
+              "
+              media="(min-width: 1024px)"
+            />
+            <source
+              srcset="
                 ./img/helena-lopes-mobile.jpg    1x,
                 ./img/helena-lopes-mobile-2x.jpg 2x
               "
               media="(min-width: 320px)"
-              />
-    
+            />
+
             <img
               src="./img/helena-lopes-mobile.jpg"
               alt="helena-lopes"
@@ -132,8 +132,8 @@
                 ./img/helena-lopes-mobile.jpg    1x,
                 ./img/helena-lopes-mobile.jpg-2x 2x
               "
-              
             />
+          </picture>
         </li>
 
         <li class="slider-item">
@@ -145,20 +145,21 @@
               "
               media="(min-width: 1280px)"
             />
-            <source srcset="
-            ./img/mat-brown-tablet.jpg    1x,
-            ./img/mat-brown-tablet-2x.jpg 2x
-          "
-          media="(min-width: 1024px)"
-          />
-            <source 
-            srcset="
+            <source
+              srcset="
+                ./img/mat-brown-tablet.jpg    1x,
+                ./img/mat-brown-tablet-2x.jpg 2x
+              "
+              media="(min-width: 1024px)"
+            />
+            <source
+              srcset="
                 ./img/mat-brown-mobile.jpg    1x,
                 ./img/mat-brown-mobile-2x.jpg 2x
               "
               media="(min-width: 320px)"
-              />
-    
+            />
+
             <img
               src="./img/mat-brown-mobile.jpg"
               alt="mat-brown"
@@ -166,8 +167,8 @@
                 ./img/mat-brown-mobile.jpg    1x,
                 ./img/mat-brown-mobile.jpg-2x 2x
               "
-              
             />
+          </picture>
         </li>
       </ul>
     </div>
