--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -1,6 +1,6 @@
 <!-- ------------Restaurant Page Menu------------ -->
 
-<section class="restaurant-menu">
+<section class="restaurant-menu" id="menu">
   <div class="container">
     <h4 class="restaurant-menu-title">МЕНЮ РЕСТОРАНУ</h4>
 
