--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -11,7 +11,7 @@
           <p class="main-contacts-text">Ресторан</p>
           <a href="tel:+380955559533" class="main-contacts-tel contacts-tel1">
             <svg class="main-contacts-tel-svg" width="24px" height="24px">
-              <use href="../img/icons.svg#phone"></use>
+              <use href="./img/icons.svg#phone"></use>
             </svg>
             095 555 95 33</a
           >
@@ -21,7 +21,7 @@
           <div class="main-contacts-call">
             <a href="tel:+380668491089" class="main-contacts-tel contacts-tel2">
               <svg class="main-contacts-tel-svg" width="24px" height="24px">
-                <use href="../img/icons.svg#phone"></use>
+                <use href="./img/icons.svg#phone"></use>
               </svg>
               066 849 10 89</a
             >
@@ -38,7 +38,7 @@
             class="main-contacts-place"
           >
             <svg class="main-contacts-place-svg" width="24px" height="24px">
-              <use href="../img/icons.svg#location"></use>
+              <use href="./img/icons.svg#location"></use>
             </svg>
             Україна, м. Полтава,<br />вул. Маршала Бірюзова, 15</a
           >
