--- a/src/css/contacts.css
+++ b/src/css/contacts.css
@@ -77,6 +77,7 @@
     flex-direction: column; 
     align-items: flex-end;
     min-width: 150px;
+    background-color: var(--primary-white-color);
     border: 0.5px solid var(--second-gold-color);
     border-radius: 2px;
 }
