--- a/src/partials/hero4.html
+++ b/src/partials/hero4.html
@@ -17,14 +17,15 @@
     </p>
     <address class="room-hero-address">
       <a
-        class="maps-link link"
+        class="maps-link"
         href="https://goo.gl/maps/gUJNV8gQoXNjQtDE9"
         target="_blank"
         rel="noopener noreferrer nofollow"
       >
-        <svg class="location-icon" width="20" height="20">
-          <use href="../img/icons.svg#location"></use></svg
-        >Україна, м. Полтава,<br />
+        <svg class="location-icon">
+          <use href="./img/icons.svg#location"></use>
+        </svg>
+        Україна, м. Полтава,<br />
         вул. Маршала Бірюзова, 15</a
       >
     </address>
