--- a/src/partials/detailsrest.html
+++ b/src/partials/detailsrest.html
@@ -82,7 +82,7 @@
         Забронювати столик
       </button>
       <button type="button" class="rest-details-btn">
-        <a class="check-menu-link" href="../restaurant.html">
+        <a class="check-menu-link" href="../restaurant.html#menu">
           Переглянути меню
         </a>
       </button>
