--- a/src/partials/detailsrest.html
+++ b/src/partials/detailsrest.html
@@ -81,11 +81,9 @@
       >
         Забронювати столик
       </button>
-      <button type="button" class="rest-details-btn">
-        <a class="check-menu-link" href="../restaurant.html#menu">
-          Переглянути меню
-        </a>
-      </button>
+      <a class="rest-details-btn" href="../restaurant.html#menu">
+        Переглянути меню
+      </a>
     </div>
   </div>
 </section>
