hover scale added

--- a/src/css/detailsrest.css
+++ b/src/css/detailsrest.css
@@ -74,6 +74,9 @@
 .white-arrows:focus,
 .white-arrows:active {
   fill: var(--second-gold-color);
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .rest-details-btn {
