--- a/src/css/hero4.css
+++ b/src/css/hero4.css
@@ -1,8 +1,5 @@
 /* <!-- ---------Room Page Hero--------- --> */
 
-/* исправить ссылки */
-/* ховер на соц иконки */
-
 .room-hero {
   position: relative;
   padding-bottom: 118px;
@@ -13,7 +10,7 @@
       rgba(0, 0, 0, 0.55) 10%,
       rgba(0, 0, 0, 0) 20%
     ),
-    url(../img/room_hero_bg_mob_1x.jpg);
+    url(./img/room_hero_bg_mob_1x.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -29,7 +26,7 @@
         rgba(0, 0, 0, 0.55) 10%,
         rgba(0, 0, 0, 0) 20%
       ),
-      url(../img/room_hero_bg_mob_2x.jpg);
+      url(./img/room_hero_bg_mob_2x.jpg);
   }
 }
 
@@ -179,7 +176,7 @@
         rgba(0, 0, 0, 0.55) 10%,
         rgba(0, 0, 0, 0) 20%
       ),
-      url(../img/room_hero_bg_tab_1x.jpg);
+      url(./img/room_hero_bg_tab_1x.jpg);
   }
 
   @media (min-device-pixel-ratio: 2),
@@ -192,7 +189,7 @@
           rgba(0, 0, 0, 0.55) 10%,
           rgba(0, 0, 0, 0) 20%
         ),
-        url(../img/room_hero_bg_tab_2x.jpg);
+        url(./img/room_hero_bg_tab_2x.jpg);
     }
   }
 
@@ -244,7 +241,7 @@
         rgba(0, 0, 0, 0.55) 10%,
         rgba(0, 0, 0, 0) 20%
       ),
-      url(../img/room_hero_bg_desk_1x.jpg);
+      url(./img/room_hero_bg_desk_1x.jpg);
   }
 
   @media (min-device-pixel-ratio: 2),
@@ -257,7 +254,7 @@
           rgba(0, 0, 0, 0.55) 10%,
           rgba(0, 0, 0, 0) 20%
         ),
-        url(../img/room_hero_bg_desk_2x.jpg);
+        url(./img/room_hero_bg_desk_2x.jpg);
     }
   }
 
