--- a/src/partials/hero4.html
+++ b/src/partials/hero4.html
@@ -38,7 +38,7 @@
           rel="noopener noreferrer nofollow"
         >
           <svg class="room-hero-soc-icon" width="24px" height="24px">
-            <use href="../img/icons.svg#instagram"></use></svg
+            <use href="./img/icons.svg#instagram"></use></svg
         ></a>
       </li>
       <li class="room-hero-soc-item">
@@ -49,7 +49,7 @@
           rel="noopener noreferrer nofollow"
         >
           <svg class="room-hero-soc-icon" width="24px" height="24px">
-            <use href="../img/icons.svg#facebook"></use></svg
+            <use href="./img/icons.svg#facebook"></use></svg
         ></a>
       </li>
       <li class="room-hero-soc-item">
@@ -60,7 +60,7 @@
           rel="noopener noreferrer nofollow"
         >
           <svg class="room-hero-soc-icon" width="24px" height="24px">
-            <use href="../img/icons.svg#telegram"></use></svg
+            <use href="./img/icons.svg#telegram"></use></svg
         ></a>
       </li>
     </ul>
