--- a/src/partials/detailsrest.html
+++ b/src/partials/detailsrest.html
@@ -13,10 +13,10 @@
     <ul class="rest-details-list">
       <li class="rest-details-item">
         <img
-          src="./img/rest_details_1_1x.jpg"
+          src="../img/rest_details_1_1x.jpg"
           srcset="
-            ./img/rest_details_1_1x.jpg 1x,
-            ./img/rest_details_1_2x.jpg 2x
+            ../img/rest_details_1_1x.jpg 1x,
+            ../img/rest_details_1_2x.jpg 2x
           "
           height="270"
           alt="Steak"
@@ -26,39 +26,39 @@
         <picture>
           <source
             srcset="
-              ./img/rest_details_2_mob_1x.jpg 1x,
-              ./img/rest_details_2_mob_2x.jpg 2x
+              ../img/rest_details_2_mob_1x.jpg 1x,
+              ../img/rest_details_2_mob_2x.jpg 2x
             "
             media="(max-width: 1023.5px)"
           />
           <source
             srcset="
-              ./img/rest_details_2_1x.jpg 1x,
-              ./img/rest_details_2_2x.jpg 2x
+              ../img/rest_details_2_1x.jpg 1x,
+              ../img/rest_details_2_2x.jpg 2x
             "
             media="(min-width: 1024px)"
           />
-          <img src="./img/rest_details_2_1x.jpg" height="270" alt="Shashlyk" />
+          <img src="../img/rest_details_2_1x.jpg" height="270" alt="Shashlyk" />
         </picture>
       </li>
       <li class="rest-details-item mob-hidden-img">
         <picture>
           <source
             srcset="
-              ./img/rest_details_3_tab_1x.jpg 1x,
-              ./img/rest_details_3_tab_2x.jpg 2x
+              ../img/rest_details_3_tab_1x.jpg 1x,
+              ../img/rest_details_3_tab_2x.jpg 2x
             "
             media="(max-width: 1279px)"
           />
           <source
             srcset="
-              ./img/rest_details_3_desk_1x.jpg 1x,
-              ./img/rest_details_3_desk_2x.jpg 2x
+              ../img/rest_details_3_desk_1x.jpg 1x,
+              ../img/rest_details_3_desk_2x.jpg 2x
             "
             media="(min-width: 1280px)"
           />
           <img
-            src="./img/rest_details_3_desk_1x.jpg"
+            src="../img/rest_details_3_desk_1x.jpg"
             height="270"
             alt="Appetizer"
           />
@@ -67,10 +67,10 @@
     </ul>
     <div class="rest-details-arrows">
       <svg class="white-arrows" width="32px" height="32px">
-        <use href="./img/icons.svg#arrow-left"></use>
+        <use href="../img/icons.svg#arrow-left"></use>
       </svg>
       <svg class="white-arrows" width="32px" height="32px">
-        <use href="./img/icons.svg#arrow-right"></use>
+        <use href="../img/icons.svg#arrow-right"></use>
       </svg>
     </div>
     <div class="rest-details-btnwrap">
@@ -81,9 +81,11 @@
       >
         Забронювати столик
       </button>
-      <a class="rest-details-btn" href="./restaurant.html#menu">
-        Переглянути меню
-      </a>
+      <button type="button" class="rest-details-btn">
+        <a class="check-menu-link" href="../restaurant.html">
+          Переглянути меню
+        </a>
+      </button>
     </div>
   </div>
 </section>
