--- a/src/partials/hero4.html
+++ b/src/partials/hero4.html
@@ -17,15 +17,14 @@
     </p>
     <address class="room-hero-address">
       <a
-        class="maps-link"
+        class="maps-link link"
         href="https://goo.gl/maps/gUJNV8gQoXNjQtDE9"
         target="_blank"
         rel="noopener noreferrer nofollow"
       >
-        <svg class="location-icon">
-          <use href="./img/icons.svg#location"></use>
-        </svg>
-        Україна, м. Полтава,<br />
+        <svg class="location-icon" width="20" height="20">
+          <use href="../img/icons.svg#location"></use></svg
+        >Україна, м. Полтава,<br />
         вул. Маршала Бірюзова, 15</a
       >
     </address>
@@ -38,7 +37,7 @@
           rel="noopener noreferrer nofollow"
         >
           <svg class="room-hero-soc-icon" width="24px" height="24px">
-            <use href="./img/icons.svg#instagram"></use></svg
+            <use href="../img/icons.svg#instagram"></use></svg
         ></a>
       </li>
       <li class="room-hero-soc-item">
@@ -49,7 +48,7 @@
           rel="noopener noreferrer nofollow"
         >
           <svg class="room-hero-soc-icon" width="24px" height="24px">
-            <use href="./img/icons.svg#facebook"></use></svg
+            <use href="../img/icons.svg#facebook"></use></svg
         ></a>
       </li>
       <li class="room-hero-soc-item">
@@ -60,7 +59,7 @@
           rel="noopener noreferrer nofollow"
         >
           <svg class="room-hero-soc-icon" width="24px" height="24px">
-            <use href="./img/icons.svg#telegram"></use></svg
+            <use href="../img/icons.svg#telegram"></use></svg
         ></a>
       </li>
     </ul>
