--- a/src/css/detailsrest.css
+++ b/src/css/detailsrest.css
@@ -4,7 +4,7 @@
   padding-top: 24px;
   padding-bottom: 40px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
-    url(./img/rest_details_bg_mob_1x.jpg);
+    url(../img/rest_details_bg_mob_1x.jpg);
   background-position: center;
   background-size: cover;
 }
@@ -14,7 +14,7 @@
   (min-resolution: 2dppx) {
   .rest-details {
     background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
-      url(./img/rest_details_bg_mob_2x.jpg);
+      url(../img/rest_details_bg_mob_2x.jpg);
   }
 }
 
@@ -74,9 +74,6 @@
 .white-arrows:focus,
 .white-arrows:active {
   fill: var(--second-gold-color);
-  -webkit-transform: scale(1.2);
-  -ms-transform: scale(1.2);
-  transform: scale(1.2);
 }
 
 .rest-details-btn {
@@ -90,7 +87,6 @@
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.02em;
-  text-align: center;
   color: var(--second-gold-color);
   background: rgba(0, 0, 0, 0.4);
   border: 2px solid var(--primary-white-color);
@@ -125,7 +121,7 @@
     padding-top: 48px;
     padding-bottom: 47px;
     background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
-      url(./img/rest_details_bg_tab_1x.jpg);
+      url(../img/rest_details_bg_tab_1x.jpg);
   }
 
   @media (min-device-pixel-ratio: 2),
@@ -136,7 +132,7 @@
           rgba(0, 0, 0, 0.65),
           rgba(0, 0, 0, 0.65)
         ),
-        url(./img/rest_details_bg_tab_2x.jpg);
+        url(../img/rest_details_bg_tab_2x.jpg);
     }
   }
 
@@ -190,7 +186,7 @@
 @media screen and (min-width: 1280px) {
   .rest-details {
     background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
-      url(./img/rest_details_bg_desk_1x.jpg);
+      url(../img/rest_details_bg_desk_1x.jpg);
   }
 
   @media (min-device-pixel-ratio: 2),
@@ -201,7 +197,7 @@
           rgba(0, 0, 0, 0.65),
           rgba(0, 0, 0, 0.65)
         ),
-        url(./img/rest_details_bg_desk_2x.jpg);
+        url(../img/rest_details_bg_desk_2x.jpg);
     }
   }
 
