--- a/src/partials/hero4.html
+++ b/src/partials/hero4.html
@@ -1,4 +1,5 @@
 <!-- ---------Room Page Hero--------- -->
+
 <section class="room-hero">
   <div class="container">
     <div class="room-hero-arrows">
@@ -17,14 +18,15 @@
     </p>
     <address class="room-hero-address">
       <a
-        class="maps-link link"
+        class="maps-link"
         href="https://goo.gl/maps/gUJNV8gQoXNjQtDE9"
         target="_blank"
         rel="noopener noreferrer nofollow"
       >
-        <svg class="location-icon" width="20" height="20">
-          <use href="../img/icons.svg#location"></use></svg
-        >Україна, м. Полтава,<br />
+        <svg class="location-icon">
+          <use href="./img/icons.svg#location"></use>
+        </svg>
+        Україна, м. Полтава,<br />
         вул. Маршала Бірюзова, 15</a
       >
     </address>
@@ -37,7 +39,7 @@
           rel="noopener noreferrer nofollow"
         >
           <svg class="room-hero-soc-icon" width="24px" height="24px">
-            <use href="../img/icons.svg#instagram"></use></svg
+            <use href="./img/icons.svg#instagram"></use></svg
         ></a>
       </li>
       <li class="room-hero-soc-item">
@@ -48,7 +50,7 @@
           rel="noopener noreferrer nofollow"
         >
           <svg class="room-hero-soc-icon" width="24px" height="24px">
-            <use href="../img/icons.svg#facebook"></use></svg
+            <use href="./img/icons.svg#facebook"></use></svg
         ></a>
       </li>
       <li class="room-hero-soc-item">
@@ -59,7 +61,7 @@
           rel="noopener noreferrer nofollow"
         >
           <svg class="room-hero-soc-icon" width="24px" height="24px">
-            <use href="../img/icons.svg#telegram"></use></svg
+            <use href="./img/icons.svg#telegram"></use></svg
         ></a>
       </li>
     </ul>
