--- a/src/partials/hero3.html
+++ b/src/partials/hero3.html
@@ -9,7 +9,7 @@
                 <a href="https://goo.gl/maps/mcsi6WdrQmKkDymHA" class="location link" target="_blank"
           rel="noopener noreferrer nofollow">
                     <svg class="location-icon" width="20" height="20">
-                        <use href="../img/icons.svg#location"></use>
+                        <use href="./img/icons.svg#location"></use>
                     </svg>Україна, м.Полтава, <br> вул. Маршала Бірюзова, 15
                 </a>
                 <div>
@@ -21,8 +21,7 @@
         </div>
         <ul class="soc-list">
             <li class="soc-item">
-                <a href="https://www.instagram.com/mimino.poltava/" class="soc-link" target="_blank" rel=”noopener
-                    noreferrer”>
+                <a href="https://www.instagram.com/mimino.poltava/" class="soc-link" target="_blank" rel=”noreferrer”>
                     <svg class="soc-icon" width="24" height="24">
                         <use href="../img/icons.svg#instagram"></use>
                     </svg>
@@ -30,14 +29,14 @@
             </li>
             <li class="soc-item">
                 <a href="https://www.facebook.com/profile.php?id=114589595894911&paipv=0&eav=AfYgKg68kXEFofZ68qpkVFqZyVZVXsLS_P-VWnl2YwaHSe_T4W2QUmOtsdei3EzsNEU&_rdr"
-                    class="soc-link" target="_blank" rel=”noopener noreferrer”>
+                    class="soc-link" target="_blank" rel=”noreferrer”>
                     <svg class="soc-icon" width="24" height="24">
                         <use href="../img/icons.svg#facebook"></use>
                     </svg>
                 </a>
             </li>
             <li class="soc-item">
-                <a href="" class="soc-link" target="_blank" rel=”noopener noreferrer”>
+                <a href="" class="soc-link" target="_blank" rel=”noreferrer”>
                     <svg class="soc-icon" width="24" height="24">
                         <use href="../img/icons.svg#telegram"></use>
                     </svg>
