--- a/src/partials/hero3.html
+++ b/src/partials/hero3.html
@@ -23,7 +23,7 @@
             <li class="soc-item">
                 <a href="https://www.instagram.com/mimino.poltava/" class="soc-link" target="_blank" rel=”noreferrer”>
                     <svg class="soc-icon" width="24" height="24">
-                        <use href="../img/icons.svg#instagram"></use>
+                        <use href="./img/icons.svg#instagram"></use>
                     </svg>
                 </a>
             </li>
@@ -31,14 +31,14 @@
                 <a href="https://www.facebook.com/profile.php?id=114589595894911&paipv=0&eav=AfYgKg68kXEFofZ68qpkVFqZyVZVXsLS_P-VWnl2YwaHSe_T4W2QUmOtsdei3EzsNEU&_rdr"
                     class="soc-link" target="_blank" rel=”noreferrer”>
                     <svg class="soc-icon" width="24" height="24">
-                        <use href="../img/icons.svg#facebook"></use>
+                        <use href="./img/icons.svg#facebook"></use>
                     </svg>
                 </a>
             </li>
             <li class="soc-item">
                 <a href="" class="soc-link" target="_blank" rel=”noreferrer”>
                     <svg class="soc-icon" width="24" height="24">
-                        <use href="../img/icons.svg#telegram"></use>
+                        <use href="./img/icons.svg#telegram"></use>
                     </svg>
                 </a>
             </li>
